--- a/Il2CppDumper/Resource1.resx
+++ b/Il2CppDumper/Resource1.resx
@@ -118,26 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ida" xml:space="preserve">
-    <value>import idaapi
+    <value>#encoding: utf-8
+import idaapi
 import random
-import os, sys
-reload(sys)
-sys.setdefaultencoding('utf-8')
 
 def SetString(addr, comm):
 	global index
 	name = "StringLiteral_" + str(index);
 	ret = idc.MakeNameEx(addr, name, SN_NOWARN)
-	st = str(comm.decode('unicode-escape'))
-	idc.MakeComm(addr, st)
+	idc.MakeComm(addr, comm)
 	index += 1
 
 def SetMethod(addr, name):
 	i = 0
-	st = str(name.decode('unicode-escape'))
-	ret = idc.MakeNameEx(addr, st, SN_NOWARN)
+	ret = idc.MakeNameEx(addr, name, SN_NOWARN)
 	while ret == 0 and i &lt; 5: # failed
-		new_name = st + '_' + str(random.randint(0, 99999))
+		new_name = name + '_' + str(random.randint(0, 99999))
 		ret = idc.MakeNameEx(addr, str(new_name), SN_NOWARN)
 		i = i + 1
 
